Return number of items and price per item entered

--- a/app/views/calculator/new.html.haml
+++ b/app/views/calculator/new.html.haml
@@ -1,3 +1,8 @@
 = form_tag calculator_path do
   Items
   = number_field_tag 'items'
+
+  Price per item
+  = number_field_tag 'price_per_item'
+
+  = submit_tag "How much do I have to pay?"
