Let the user enter his tax rate

--- a/app/views/calculator/new.html.haml
+++ b/app/views/calculator/new.html.haml
@@ -5,4 +5,8 @@
   Price per item
   = number_field_tag 'price_per_item'
 
+  Tax you have to pay
+  = number_field_tag 'tax'
+
+
   = submit_tag "How much do I have to pay?"
