Accept ES as country code and add it's tax

--- a/app/views/calculator/new.html.haml
+++ b/app/views/calculator/new.html.haml
@@ -6,7 +6,7 @@
   = number_field_tag 'price_per_item'
 
   Tax you have to pay
-  = number_field_tag 'tax'
+  = text_field_tag 'cc'
 
 
   = submit_tag "How much do I have to pay?"
